--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
     footer img{height:46px;width:auto;display:block;margin:0 auto 8px}
 
     .error{color:#d64545;font-size:14px;display:none;margin-top:8px}
+        /* === Overrides de títulos das caixas === */
+    .label{
+      font-weight: 800;            /* negrito em TODAS as caixas menores */
+    }
+    
+    .bigcard-title{
+      font-weight: 800;            /* negrito nas duas caixas principais */
+      font-size: clamp(15px, 2.2vw, 18px);  /* aumenta um pouco o tamanho */
+    }
+
   </style>
 </head>
 <body>
