--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
       <!-- 1) NÚMEROS PRINCIPAIS -->
       <div class="top-metrics">
         <div class="bigcard">
-          <div class="bigcard-title">🟦 Em espera — acumulado geral</div>
+          <div class="bigcard-title">🟦 Em espera — Total</div>
           <div id="geralAcumFila" class="big-number big1">—</div>
           <div class="bigcard-foot">Soma de todos os postos em todos os meses registrados.</div>
         </div>
         <div class="bigcard">
-          <div class="bigcard-title">📅 Agendados (total)</div>
+          <div class="bigcard-title">📅 Agendados — Total</div>
           <div id="agTotal" class="big-number big2">—</div>
           <div class="bigcard-foot">Total de pacientes com agendamento.</div>
         </div>
@@ -135,12 +135,12 @@
       <div class="sectionTitle">Totais conforme o filtro</div>
       <div class="grid">
         <div class="card">
-          <div class="label">🕒 Em espera — mês selecionado</div>
+          <div class="label">🕒 Em espera — mês selecionado do posto</div>
           <div id="filaMes" class="value">—</div>
           <div id="filaMesObs" class="sub"></div>
         </div>
         <div class="card">
-          <div class="label">🏥 Em espera — acumulado do posto</div>
+          <div class="label">🏥 Em espera — Total do posto</div>
           <div id="postoAcumFila" class="value">—</div>
           <div id="postoAcumFilaObs" class="sub"></div>
         </div>
