--- a/index.html
+++ b/index.html
@@ -79,6 +79,36 @@
       font-size: clamp(16px, 2.4vw, 20px);
     }
 
+        /* Títulos em negrito e cor escura */
+    .label,
+    .bigcard-title{
+      font-weight: 800;
+      color: var(--fg);
+    }
+    
+    /* Títulos das duas caixas principais (topo) um pouco maiores */
+    .bigcard-title{
+      font-size: clamp(16px, 2.4vw, 20px);
+    }
+    
+    /* Aviso com e-mail */
+    .notice{
+      margin: 8px 0 16px;
+      border: 1px solid var(--line);
+      background: var(--chip);
+      border-left: 6px solid var(--brand-blue);
+      border-radius: 12px;
+      padding: 12px 14px;
+      color: var(--fg);
+      font-size: 14px;
+    }
+    .notice a{
+      color: var(--big1);
+      font-weight: 800;
+      text-decoration: none;
+    }
+    .notice a:hover{ text-decoration: underline; }
+
   </style>
 </head>
 <body>
@@ -105,6 +135,11 @@
           <div id="geralAcumFila" class="big-number big1">—</div>
           <div class="bigcard-foot">Soma de todos os postos em todos os meses registrados.</div>
         </div>
+          <div class="notice">
+        📩 Quer saber sua posição exata na fila?
+        Fale com nossa equipe pelo e-mail
+        <a href="mailto:odontologiajaperi@gmail.com">odontologiajaperi@gmail.com</a>.
+          </div>
         <div class="bigcard">
           <div class="bigcard-title">📅 Agendados — Total</div>
           <div id="agTotal" class="big-number big2">—</div>
