--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     @media (max-width:700px){.toolbar{grid-template-columns:1fr}}
     label{font-size:12px;color:var(--muted);margin-bottom:6px;display:block}
 
-    /* Campo com “cara de botão” + setinha */
+    /* Campo com “cara de botão” + setinha + dica de toque */
     .field{}
     .tap-hint{
       display:inline-block;margin-left:8px;padding:2px 8px;
@@ -84,6 +84,24 @@
     .row{display:flex;justify-content:space-between;align-items:center;border:1px solid var(--line);border-radius:12px;padding:10px 12px;background:#fff}
     .row b{font-weight:800}
 
+    /* Aviso com e-mail */
+    .notice{
+      margin: 0 0 14px;
+      border: 1px solid var(--line);
+      background: var(--chip);
+      border-left: 6px solid var(--brand-blue);
+      border-radius: 12px;
+      padding: 12px 14px;
+      color: var(--fg);
+      font-size: 14px;
+    }
+    .notice a{
+      color: var(--big1);
+      font-weight: 800;
+      text-decoration: none;
+    }
+    .notice a:hover{ text-decoration: underline; }
+
     /* rodapé */
     footer{margin-top:14px;padding:16px 0 6px;text-align:center;color:var(--muted);font-size:13px}
     footer img{height:46px;width:auto;display:block;margin:0 auto 8px}
@@ -118,6 +136,13 @@
           <div id="agTotal" class="big-number big2">—</div>
           <div class="bigcard-foot">Total de pacientes com agendamento.</div>
         </div>
+      </div>
+
+      <!-- AVISO COM E-MAIL -->
+      <div class="notice">
+        📩 Quer saber sua posição exata na fila?
+        Fale com nossa equipe pelo e-mail
+        <a href="mailto:odontologiajaperi@gmail.com">odontologiajaperi@gmail.com</a>.
       </div>
 
       <!-- 2) FILTROS -->
