--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <title>Painel — Saúde Bucal Japeri</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light">
+    <!-- Favicon / Miniatura da página -->
+  <link rel="icon" type="image/png" sizes="32x32" href="brasil-sorridente-logo222.png?v=2">
+  <link rel="icon" type="image/png" sizes="192x192" href="brasil-sorridente-logo222.png?v=2">
+  <link rel="apple-touch-icon" href="brasil-sorridente-logo222.png?v=2">
+  <meta name="theme-color" content="#0F8BD6">
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600;700&family=Inter:wght@500;600;800&display=swap" rel="stylesheet">
   <style>
